Last updates - webpage done

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <header class="nav">
 
           <!-- toolbar -->
-        <nav>
+        <nav class="bgcolor-nav">
 
           <!-- toolbar superiore -->
           <div class="toolbar center">
@@ -49,19 +49,22 @@
                  <a id="freehub" href="#"><strong>GetHubspotFree</strong></a>
 
               </div>
+
               <div  class="button colored">
 
                 <a id="login" href="#"><strong>Log in</strong></a>
 
               </div>
+
               <div class="button search">
 
-                <a id="searchcolor"href="#"><i class="fas fa-search"></i></a>
+                  <input  type="text" name="search" placeholder="Search..." >
+
+                  <a id="searchcolor"href="#"><i class="fas fa-search"></i></a>
 
               </div>
 
             </div>
-
 
           </div>
 
@@ -105,7 +108,7 @@
 
           <img id="jumbotron"src="img/jumbotron.png" alt="jumbotron">
 
-          <div class="jumbotext center">
+          <div class="jumbotext">
 
             <div class="textjumbo">
 
@@ -170,7 +173,6 @@
            <!-- hat section with logo and text -->
             <div class="hat clearfix">
 
-
                <!-- left hat section  -->
               <div class="lhat">
 
@@ -183,7 +185,6 @@
                 </div>
 
               </div>
-
 
                <!-- right hat section -->
               <div class="rhat">
@@ -199,9 +200,9 @@
 
                 </h3> <br>
 
-                    <span><i class="fas fa-check-circle"></i>&emsp; Contact Insight</span>
-                    <span><i class="fas fa-check-circle"></i>&emsp; Deals</span>
-                    <span><i class="fas fa-check-circle"></i>&emsp; Task</span>
+                    <span><i class="fas fa-check-circle"></i>&emsp; Contact Insight&emsp;</span>
+                    <span><i class="fas fa-check-circle"></i>&emsp; Deals&emsp;</span>
+                    <span><i class="fas fa-check-circle"></i>&emsp; Task&emsp;</span>
 
               </div>
 
@@ -262,7 +263,6 @@
                 <p>Time-saving sales software that helps<br>you get deeper insights into prospects,<br>automate the tasks you hate, and close<br>more deals faster. </p>
 
               </div>
-
 
                <!-- middle box -->
               <div class="boxes-item">
@@ -329,7 +329,6 @@
                   </div>
 
                 </div>
-
 
               </div>
 
@@ -425,6 +424,7 @@
                   </div>
 
                 </div>
+
                 <div class="gridbox">
 
                   <div class="gridboxup">
@@ -460,6 +460,7 @@
 
 
                 </div>
+
                 <div class="gridbox">
 
                   <div class="gridboxup">
@@ -477,6 +478,7 @@
 
 
                 </div>
+
                 <div class="gridbox">
 
                   <div class="gridboxup">
@@ -484,6 +486,7 @@
                     <img src="img/lists.svg" alt="">
 
                   </div>
+
                   <div class="gridboxdown">
                       <h1>5K</h1><span> &#43;</span>
                       <p>profiles and counting</p>
@@ -503,7 +506,7 @@
         </section>
 
          <!-- pre-footer section -->
-        <section>
+        <section class="bgcolor-section">
 
           <div class="center">
 
@@ -522,43 +525,49 @@
 
                 <div class="prefootersponsor">
 
-                  <img src="img/atlassiansvg.svg" alt="">
+                  <img src="img/atlassianwebp.webp" alt="atlassian-sponsor">
 
                 </div>
 
                 <div class="prefootersponsor">
 
-                  <img src="img/doordashsvg.svg" alt="">
+                  <img src="img/doordashwebp.webp" alt="doordash-sponsor">
 
                 </div>
+
                 <div class="prefootersponsor">
 
-                  <img src="img/crowdsvg.svg" alt="">
+                  <img src="img/crowdwebp.webp" alt="crowd-sponsor">
 
                 </div>
+
                 <div class="prefootersponsor">
 
-                  <img src="img/survey.svg" alt="">
+                  <img src="img/survey.svg" alt="survey-sponsor">
 
                 </div>
+
                 <div class="prefootersponsor">
 
-                  <img src="img/subarusvg.svg" alt="">
+                  <img src="img/subaruwebp.webp" alt="subaru-sponsor">
 
                 </div>
+
                 <div class="prefootersponsor">
 
-                  <img src="img/wistiasvg.svg" alt="">
+                  <img src="img/wistiawebp.webp" alt="wistia-sponsor">
 
                 </div>
+
                 <div class="prefootersponsor">
 
-                  <img src="img/clanpasssvg.svg" alt="">
+                  <img src="img/classpasswebp.webp" alt="classpass-sponsor">
 
                 </div>
+
                 <div class="prefootersponsor">
 
-                  <img src="img/vmwaresvg.svg" alt="">
+                  <img src="img/vmwarewebp.webp" alt="vmware-sponsor">
 
                 </div>
 
@@ -600,7 +609,7 @@
                    <!-- prefooter img -->
                   <div class="prefooterimg-logo">
 
-                     <img src="img/woman.webp" alt="">
+                     <img src="img/woman.webp" alt="woman-picture">
 
                   </div>
 
@@ -698,16 +707,19 @@
                     <a href="#"><i class="fab fa-instagram"></i></a>
 
                   </div>
+
                   <div class="icons">
 
                     <a href="#"><i class="fab fa-youtube"></i></a>
 
                   </div>
+
                   <div class="icons">
 
                     <a href="#"><i class="fab fa-twitter"></i></a>
 
                   </div>
+
                   <div class="icons">
 
                     <a href="#"><i class="fab fa-linkedin-in"></i></a>
@@ -726,14 +738,15 @@
 
                <!-- center box lenguages -->
               <div class="lenguages">
+
                 <div class="lenguages-center">
 
                     <a href="#"><span>English</span></a>
                     <a href="#"><span>Deutsch</span></a>
-                    <a href="#">  <span>日本人</span></a>
+                    <a href="#"><span>日本人</span></a>
                     <a href="#"><span>Español</span></a>
                     <a href="#"><span>Português</span> </a>
-                    <a href="#">  <span>Français</span></a>
+                    <a href="#"><span>Français</span></a>
 
                 </div>
 
