--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
 
                  <span><i class="fas fa-globe-europe"></i></span>
 
-                 <span> <a id="linkborder"  href="#"><strong>English</strong></a></span>
+                 <span> <a href="#"><strong>English<i class="fas fa-chevron-down"></i></strong></a></span>
+
+                 <span class="verbar">&verbar;</span>
 
               </div>
 
@@ -87,11 +89,11 @@
             <!-- right side toolbar inferiore -->
             <div class="right clearfix">
 
-              <span><a href="#"><strong>About</strong></a></span>
-              <span><a href="#"><strong>Partners</strong></a></span>
-              <span><a href="#"><strong>Resources</strong></a></span>
+              <span><a href="#"><strong>About<i class="fas fa-chevron-down"></i></strong></a></span>
+              <span><a href="#"><strong>Partners<i class="fas fa-chevron-down"></i></strong></a></span>
+              <span><a href="#"><strong>Resources<i class="fas fa-chevron-down"></i></strong></a></span>
               <span><a href="#"><strong>Pricing</strong></a></span>
-              <span><a href="#"><strong>Software</strong></a></span>
+              <span><a href="#"><strong>Software<i class="fas fa-chevron-down"></i></strong></a></span>
 
             </div>
 
